...
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"

    >

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_item_claim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="@color/backgroundCardView"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_toStartOf="@+id/sendMail"
                android:layout_toEndOf="@+id/claimImage"
                android:layout_toRightOf="@+id/claimImage" />

            <ImageButton
                android:id="@+id/sendMail"
                android:layout_width="30dp"
...
