...
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    >

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_hiking_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="@color/backgroundCardView"
...
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imageHikingGroup" />

            <ImageButton
                android:id="@+id/buttonJoinHikingGroup"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:background="@mipmap/ic_register_foreground"/>

        </RelativeLayout>
...
